--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,7 +7,7 @@
             "dest":"/",
             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
             "headers": {
-                "Access-Control-Allow-Origin": "https://frizlet-app-frontend.vercel.app/"
+                "Access-Control-Allow-Origin": "https://frizlet-app-frontend.vercel.app"
             }
         }
     ]    
