--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,15 @@
 {
     "rewrites":  [
       {"source": "/(.*)", "destination": "/"}
+    ],
+    "routes" : [
+        {
+            "src" : "/(.*)",
+            "dest":"/",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "https://frizlet-app-frontend.vercel.app"
+            }
+        }
     ]
-  }
+}
